--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
   <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
 </head>
 
-<body class="xpnd-body">
+<body class="ks-body">
 
-  <xpnd-app></xpnd-app>
+  <ks-app></ks-app>
 
   <% if (htmlWebpackPlugin.options.metadata.googleAnalytics && !htmlWebpackPlugin.options.metadata.isDevServer) { %>
   <script>
